fix css: reply item being cropped.

--- a/mockup/css/style.css
+++ b/mockup/css/style.css
@@ -744,7 +744,6 @@ a.nav_item_sidebar--sub {
 }
 .focusDiscussion_title {
   font-weight: 700;
-  font-size: 20px;
   font-size: 16px;
   margin: 10px 0px;
 }
@@ -805,38 +804,59 @@ a.nav_item_sidebar--sub {
   transition: .2s;
   transition-duration: .5s;
 
+  box-sizing: border-box;
+
 
 }
 .post_reply_item.show {
   bottom: 0px;
-
+  box-sizing: border-box;
   -webkit-transition: bottom .5s ease-in-out;
   transition: bottom .5s ease-in-out;
 
 }
 .post_reply_item_title {
-  margin: 8px 0px;
   font-size: 14px;
-  margin-right: 40px;
-  position: relative;
+  padding: 4px 0px;
+  padding-right: 30px;
+  display: inline-block;
+
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap; 
+  text-overflow: ellipsis;
 
 }
 .post_reply_item_minimize {
   position: absolute;
-  right: 8px;
-  top: 8px;
+  right: 4px;
+  top: 4px;
   cursor: pointer;
   width: 40px;
   text-align: center;
 }
+.post_reply_item_textarea {
+  height: 100%;
+  padding-bottom: 45px;
+  box-sizing: border-box;
+}
 .post_reply_item textarea {
   width: 100%;
-  height: 80%;
+  height: 100%;
   resize: none;
 
 }
 .post_reply_item_control {
-  margin: 5px 0px;
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  height: 45px;
+  display: flex;
+
+}
+.post_reply_item_control_button {
+  margin: auto 0;  
+  
 }
 
 /* question bottom "more" function */
